@@ -10,17 +10,24 @@ def triggerSundays = '''
 H H * * 0
 '''
 
+def findbugs2Url = 'http://downloads.sourceforge.net/project/findbugs/findbugs/2.0.3/findbugs-noUpdateChecks-2.0.3.zip?download='
+def findbugs2Lib = 'lib/findbugs-noUpdateChecks-2.0.3.zip'
+def findbugs3Url = 'http://downloads.sourceforge.net/project/findbugs/findbugs/3.0.1/findbugs-noUpdateChecks-3.0.1.zip?download='
+def findbugs3Lib = 'lib/findbugs-noUpdateChecks-3.0.1.zip'
+def xercesUrl = 'http://repo1.maven.org/maven2/xerces/xercesImpl/2.6.1/xercesImpl-2.6.1.jar'
+def xercesLib = 'compile-lib/xercesImpl-2.6.1.jar'
+
 def poijobs = [
     [ name: 'POI-DSL-1.6',
             // workaround as Sourceforge does not accept any of the SSL ciphers in JDK 6 any more and thus we cannot download this jar
             // as part of the Ant build
-            addShell: 'wget -O lib/findbugs-noUpdateChecks-2.0.3.zip http://downloads.sourceforge.net/project/findbugs/findbugs/2.0.3/findbugs-noUpdateChecks-2.0.3.zip?download='
+            addShell: "wget -O ${findbugs2Lib} ${findbugs2Url}"
     ],
     [ name: 'POI-DSL-1.8', jdk: '1.8', trigger: 'H */12 * * *'
     ],
     [ name: 'POI-DSL-OpenJDK', jdk: 'OpenJDK', trigger: 'H */12 * * *',
         // H13-H20 (Ubuntu 16.04) do not have OpenJDK 6 installed, see https://issues.apache.org/jira/browse/INFRA-12880
-        slaveAdd: '&&!beam1&&!beam2&&!beam3&&!beam4&&!beam5&&!beam6&&!beam7&&!beam8&&!H12&&!H13&&!H14&&!H15&&!H16&&!H17&&!H18&&!H19&&!H20&&!H21&&!H22&&!H23&&!H24&&!qnode1&&!qnode2&&!qnode3&&!ubuntu-eu2&&!ubuntu-eu3&&!ubuntu-us1',
+        slaveAdd: '&&!beam1&&!beam2&&!beam3&&!beam4&&!beam5&&!beam6&&!beam7&&!beam8&&!H12&&!H13&&!H14&&!H15&&!H16&&!H17&&!H18&&!H19&&!H20&&!H21&&!H22&&!H23&&!H24&&!H25&&!H26&&!H27&&!qnode1&&!qnode2&&!qnode3&&!ubuntu-eu2&&!ubuntu-eu3&&!ubuntu-us1',
         // the JDK is missing on some slaves so builds are unstable
         skipcigame: true
     ],
@@ -42,12 +49,12 @@ def poijobs = [
         disabled: true, skipcigame: true
     ],
     [ name: 'POI-DSL-old-Xerces', trigger: triggerSundays,
-        shell: 'mkdir -p compile-lib && test -f compile-lib/xercesImpl-2.6.1.jar || wget -O compile-lib/xercesImpl-2.6.1.jar http://repo1.maven.org/maven2/xerces/xercesImpl/2.6.1/xercesImpl-2.6.1.jar\n',
+        shell: "mkdir -p compile-lib && test -f ${xercesLib} || wget -O ${xercesLib} ${xercesUrl}\n",
         // the property triggers using Xerces as XML Parser and previously showed some exception that can occur
-        properties: ['-Dadditionaljar=compile-lib/xercesImpl-2.6.1.jar'],
+        properties: ["-Dadditionaljar=${xercesLib}"],
         // workaround as Sourceforge does not accept any of the SSL ciphers in JDK 6 any more and thus we cannot download this jar
         // as part of the Ant build
-        addShell: 'wget -O lib/findbugs-noUpdateChecks-2.0.3.zip http://downloads.sourceforge.net/project/findbugs/findbugs/2.0.3/findbugs-noUpdateChecks-2.0.3.zip?download='
+        addShell: "wget -O ${findbugs2Lib} ${findbugs2Url}"
     ],
     [ name: 'POI-DSL-Maven', trigger: 'H */4 * * *', maven: true
     ],
@@ -61,9 +68,17 @@ def poijobs = [
     ],
     [ name: 'POI-DSL-no-scratchpad', trigger: triggerSundays, noScratchpad: true
     ],
-    [ name: 'POI-DSL-SonarQube', jdk: '1.8', trigger: 'H 9 * * *', maven: true, sonar: true
+    [ name: 'POI-DSL-SonarQube', jdk: '1.8', trigger: 'H 9 * * *', maven: true, sonar: true, skipcigame: true
     ],
     [ name: 'POI-DSL-SonarQube-Gradle', jdk: '1.8', trigger: 'H 9 * * *', gradle: true, sonar: true, skipcigame: true
+    ],
+    [ name: 'POI-DSL-Windows-1.6', jdk: '1.6', trigger: 'H */12 * * *', windows: true, slaves: 'Windows',
+    	addShell: "@if not exist ${findbugs2Lib} powershell -Command wget -Uri \"${findbugs2Url}\" -OutFile ${findbugs2Lib} -UserAgent [Microsoft.PowerShell.Commands.PSUsergAgent]::Chrome"
+    ],
+    [ name: 'POI-DSL-Windows-1.7', jdk: '1.7', trigger: 'H */12 * * *', windows: true, slaves: 'Windows',
+    	addShell: "@if not exist ${findbugs3Lib} powershell -Command wget -Uri \"${findbugs3Url}\" -OutFile ${findbugs3Lib} -UserAgent [Microsoft.PowerShell.Commands.PSUsergAgent]::Chrome"
+    ],
+    [ name: 'POI-DSL-Windows-1.8', jdk: '1.8', trigger: 'H */12 * * *', windows: true, slaves: 'Windows'
     ],
 ]
 
@@ -72,30 +87,27 @@ def defaultJdk = '1.6'
 def defaultTrigger = 'H/15 * * * *'     // check SCM every 60/15 = 4 minutes
 def defaultEmail = 'dev@poi.apache.org'
 def defaultAnt = 'Ant 1.9.9'
-// currently a lot of H?? slaves don't have Ant installed ...
-def defaultSlaves = 'ubuntu&&!cloud-slave&&!H15&&!H17&&!H18&&!H24&&!ubuntu-4'
+// currently a lot of H?? slaves don't have Ant installed ... H21 seems to have a SVN problem
+def defaultSlaves = 'ubuntu&&!cloud-slave&&!H15&&!H17&&!H18&&!H24&&!ubuntu-4&&!H21'
 
 def jdkMapping = [
     '1.6': 'JDK 1.6 (latest)',
     '1.7': 'JDK 1.7 (latest)',
     '1.8': 'JDK 1.8 (latest)',
-    '1.9': 'JDK 9 b156 (early access build) with project Jigsaw',
+    '1.9': 'JDK 9 b179 (early access build)',
     'OpenJDK': 'OpenJDK 6 (on Ubuntu only) ',   // blank is required here until the name in the Jenkins instance is fixed!
     'IBMJDK': 'IBM 1.8 64-bit (on Ubuntu only)',
 ]
 
-poijobs.each { poijob ->
-    def jdkKey = poijob.jdk ?: defaultJdk
-    def trigger = poijob.trigger ?: defaultTrigger
-    def email = poijob.email ?: defaultEmail
-    def slaves = defaultSlaves + (poijob.slaveAdd ?: '')
+def shellEx(def context, String cmd, def poijob) {
+	if (poijob.windows) {
+		context.batchFile(cmd) 
+	} else {
+		context.shell(cmd) 
+	} 
+}
 
-    job(poijob.name) {
-        if (poijob.disabled) {
-            disabled()
-        }
-
-        def defaultDesc = '''
+def defaultDesc = '''
 <img src="https://poi.apache.org/resources/images/project-logo.jpg" />
 <p>
 Apache POI - the Java API for Microsoft Documents
@@ -107,9 +119,7 @@ see <a href="https://github.com/jenkinsci/job-dsl-plugin/wiki">https://github.co
 for more details about the DSL.</b>
 </p>'''
 
-        description( defaultDesc +
-(poijob.apicheck ? 
-'''
+def apicheckDesc = '''
 <p>
 <b><a href="https://builds.apache.org/analysis/dashboard?id=org.apache.poi%3Apoi-parent&did=1" target="_blank">Sonar reports</a></b> -
 <p>
@@ -119,14 +129,58 @@ for more details about the DSL.</b>
 <b><a href="lastSuccessfulBuild/artifact/build/scratchpad/build/reports/japi.html">API Check POI-Scratchpad</a></b>
 
 </p>
-''' :
 '''
+
+def sonarDesc = '''
 <p>
 <b><a href="lastSuccessfulBuild/findbugsResult/" target="_blank">Findbugs report of latest build</a></b> -
 <b><a href="https://builds.apache.org/analysis/dashboard?id=org.apache.poi%3Apoi-parent&did=1" target="_blank">Sonar reports</a></b> -
 <b><a href="lastSuccessfulBuild/artifact/build/coverage/index.html" target="_blank">Coverage of latest build</a></b>
 </p>
-'''))
+'''
+
+def shellCmdsUnix =
+'''# show which files are currently modified in the working copy
+svn status
+
+# print out information about which exact version of java we are using
+echo Java-Home: $JAVA_HOME
+ls -al $JAVA_HOME/
+$JAVA_HOME/bin/java -version
+
+POIJOBSHELL
+
+# ignore any error message
+exit 0'''
+
+def shellCmdsWin =
+'''@echo off
+:: show which files are currently modified in the working copy
+svn status
+
+:: print out information about which exact version of java we are using
+echo Java-Home: %JAVA_HOME%
+dir "%JAVA_HOME:\\\\=\\%"
+"%JAVA_HOME%/bin/java" -version
+
+POIJOBSHELL
+
+:: ignore any error message
+exit /b 0'''
+
+poijobs.each { poijob ->
+    def jdkKey = poijob.jdk ?: defaultJdk
+    def trigger = poijob.trigger ?: defaultTrigger
+    def email = poijob.email ?: defaultEmail
+    def slaves = poijob.slaves ?: defaultSlaves + (poijob.slaveAdd ?: '')
+    def antRT = defaultAnt + (poijob.windows ? ' (Windows)' : '')
+
+    job(poijob.name) {
+        if (poijob.disabled) {
+            disabled()
+        }
+
+        description( defaultDesc + (poijob.apicheck ? apicheckDesc : sonarDesc) )
         logRotator {
             numToKeep(5)
             artifactNumToKeep(1)
@@ -136,7 +190,7 @@ for more details about the DSL.</b>
             env('LANG', 'en_US.UTF-8')
             if(jdkKey == '1.9') {
                 // when using JDK 9 for running Ant, we need to provide more packages for the forbidden-api-checks task
-                env('ANT_OPTS', '--add-modules=java.xml.bind')
+                env('ANT_OPTS', '--add-modules=java.xml.bind --add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED')
             }
         }
         wrappers {
@@ -162,20 +216,12 @@ for more details about the DSL.</b>
             scm(trigger)
         }
 
-        def shellcmds = '# show which files are currently modified in the working copy\n' +
-            'svn status\n' +
-            '\n' +
-            'echo Java-Home: $JAVA_HOME\n' +
-            'ls -al $JAVA_HOME/\n' +
-            '\n' +
-            (poijob.shell ?: '') + '\n' +
-            '# ignore any error message\n' +
-            'exit 0\n'
+        def shellcmds = (poijob.windows ? shellCmdsWin : shellCmdsUnix).replace('POIJOBSHELL', poijob.shell ?: '')
 
         // Create steps and publishers depending on the type of Job that is selected
         if(poijob.maven) {
             steps {
-                shell(shellcmds)
+                shellEx(delegate, shellcmds, poijob)
                 maven {
                     goals('clean')
                     rootPOM('sonar/pom.xml')
@@ -211,15 +257,15 @@ for more details about the DSL.</b>
             }
         } else if (poijob.javadoc) {
             steps {
-                shell(shellcmds)
+                shellEx(delegate, shellcmds, poijob)
                 ant {
                     targets(['clean', 'javadocs'] + (poijob.properties ?: []))
                     prop('coverage.enabled', true)
                     // Properties did not work, so I had to use targets instead
                     //properties(poijob.properties ?: '')
-                    antInstallation(defaultAnt)
+                    antInstallation(antRT)
                 }
-                shell('zip -r build/javadocs.zip build/tmp/site/build/site/apidocs')
+                shellEx(delegate, 'zip -r build/javadocs.zip build/tmp/site/build/site/apidocs', poijob)
             }
             publishers {
                 if (!poijob.skipcigame) {
@@ -231,7 +277,7 @@ for more details about the DSL.</b>
             }
         } else if (poijob.apicheck) {
             steps {
-                shell(shellcmds)
+                shellEx(delegate, shellcmds, poijob)
                 gradle {
                     tasks('japicmp')
                     useWrapper(false)
@@ -248,7 +294,7 @@ for more details about the DSL.</b>
             }
         } else if(poijob.sonar) {
             steps {
-                shell(shellcmds)
+                shellEx(delegate, shellcmds, poijob)
                 gradle {
                     switches('-PenableSonar')
                     switches('-Dsonar.host.url=$SONAR_HOST_URL')
@@ -266,9 +312,9 @@ for more details about the DSL.</b>
             }
         } else {
             steps {
-                shell(shellcmds)
+                shellEx(delegate, shellcmds, poijob)
                 if(poijob.addShell) {
-                    shell(poijob.addShell)
+                    shellEx(delegate, poijob.addShell, poijob)
                 }
                 // For Jobs that should still have the default set of publishers we can configure different steps here
                 if(poijob.gradle) {
@@ -280,12 +326,12 @@ for more details about the DSL.</b>
                     ant {
                         targets(['clean', 'compile-all'] + (poijob.properties ?: []))
                         prop('coverage.enabled', true)
-                        antInstallation(defaultAnt)
+                        antInstallation(antRT)
                     }
                     ant {
                         targets(['-Dscratchpad.ignore=true', 'jacocotask', 'test-all', 'testcoveragereport'] + (poijob.properties ?: []))
                         prop('coverage.enabled', true)
-                        antInstallation(defaultAnt)
+                        antInstallation(antRT)
                     }
                 } else {
                     ant {
@@ -293,14 +339,14 @@ for more details about the DSL.</b>
                         prop('coverage.enabled', true)
                         // Properties did not work, so I had to use targets instead
                         //properties(poijob.properties ?: '')
-                        antInstallation(defaultAnt)
+                        antInstallation(antRT)
                     }
                     ant {
                         targets(['run'] + (poijob.properties ?: []))
                         buildFile('src/integrationtest/build.xml')
                         // Properties did not work, so I had to use targets instead
                         //properties(poijob.properties ?: '')
-                        antInstallation(defaultAnt)
+                        antInstallation(antRT)
                     }
                 }
             }
